# ChangeLog for sys-devel/llvm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.51 2011/11/22 13:42:23 voyageur Exp $

  22 Nov 2011; Bernard Cafarelli <voyageur@gentoo.org> llvm-3.0_rc3.ebuild,
  metadata.xml:
  Add support for gold plugin, thanks Matthias Maier in bug #371951

  17 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> llvm-2.9-r2.ebuild:
  x86 stable wrt bug #384709

*llvm-3.0_rc3 (09 Nov 2011)

  09 Nov 2011; Bernard Cafarelli <voyageur@gentoo.org> -llvm-3.0_rc1.ebuild,
  +llvm-3.0_rc3.ebuild:
  Update rc, some more ebuild cleanups

*llvm-3.0_rc1 (09 Nov 2011)

  09 Nov 2011; Bernard Cafarelli <voyageur@gentoo.org> +llvm-3.0_rc1.ebuild,
  llvm-9999.ebuild:
  Add rc release to prepare for 3.0, remove llvm-gcc detection code (not used
  in configure anymore)

  04 Oct 2011; Bernard Cafarelli <voyageur@gentoo.org> llvm-2.8-r2.ebuild,
  -llvm-2.8-r4.ebuild, llvm-2.9-r2.ebuild, llvm-9999.ebuild:
  Fix forced -O3 -fomit-frame-pointer CFLAGS again, bug #385543

  03 Oct 2011; Bernard Cafarelli <voyageur@gentoo.org> -llvm-2.8-r1.ebuild,
  llvm-2.8-r2.ebuild, llvm-2.8-r4.ebuild, -llvm-2.9-r1.ebuild,
  llvm-2.9-r2.ebuild, llvm-9999.ebuild, metadata.xml:
  Rename alltargets USE flag to multitarget, bug #382307. Clean bison
  dependency, depending only on new enough one. Drop some versions

  28 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  USE="libffi" is now global USE flag.

  15 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> llvm-2.8-r2.ebuild:
  ppc stable wrt #360553

  06 Jun 2011; Bernard Cafarelli <voyageur@gentoo.org> llvm-9999.ebuild:
  Update live ebuild to sync latest ebuild changes (vim-syntax, libffi, ...)

*llvm-2.9-r2 (23 May 2011)

  23 May 2011; Bernard Cafarelli <voyageur@gentoo.org> +llvm-2.9-r2.ebuild,
  +files/llvm-2.9-Operator.h-c++0x.patch:
  Fix header for gcc 4.6, bug #365925
