@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/llvm-2.8-r2.ebuild,v 1.7 2011/10/04 11:43:37 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/llvm-2.8-r2.ebuild,v 1.8 2011/11/24 08:56:51 grobian Exp $
 
 EAPI="3"
 inherit eutils multilib toolchain-funcs
@@ -160,6 +160,7 @@ src_install() {
 
 	# Fix install_names on Darwin.  The build system is too complicated
 	# to just fix this, so we correct it post-install
+	local lib= f= odylib=
 	if [[ ${CHOST} == *-darwin* ]] ; then
 		for lib in lib{EnhancedDisassembly,LLVM-${PV},BugpointPasses,LLVMHello,LTO,profile_rt}.dylib ; do
 			# libEnhancedDisassembly is Darwin10 only, so non-fatal
@@ -171,9 +172,10 @@ src_install() {
 			eend $?
 		done
 		for f in "${ED}"/usr/bin/* "${ED}"/usr/lib/${PN}/libLTO.dylib ; do
-			ebegin "fixing install_name reference to libLLVM-${PV}.dylib of ${f##*/}"
+			odylib=$(scanmacho -BF'%n#f' "${f}" | tr ',' '\n' | grep libLLVM-${PV}.dylib)
+			ebegin "fixing install_name reference to ${odylib} of ${f##*/}"
 			install_name_tool \
-				-change "${S}"/Release/lib/libLLVM-${PV}.dylib \
+				-change "${odylib}" \
 					"${EPREFIX}"/usr/lib/${PN}/libLLVM-${PV}.dylib \
 				"${f}"
 			eend $?
